# cvr-analysis

./: .gitignore  pyproject.toml  requirements.txt  setup.py
cvr_analysis/: bids.py  get_output_files.py  plotting.py  refinement_hash.py  regression.py  timeseries.py
cvr_analysis/legacy/: co2.py  plotting.py  refinement_hash.py
cvr_analysis/modalities_study/: Dockerfile  __init__.py  environment.yml  run.py  setup.py  setup_wf.py
cvr_analysis/modalities_study/workflows/: cvr_wf.py  main_wf.py  post_processing.py  regression.py  save_data.py
cvr_analysis/modalities_study/workflows/utils/: confounds.py  data_computation.py  signal_processing.py
docker/: Dockerfile
src/: bids.py  confounds.py  plotting.py  regression.py
src/cvr_analysis/: _version.py  run.py
src/cvr_analysis/default/doppler/: __init__.py  cvr_wf.py  load_data_wf.py  save_data.py
src/cvr_analysis/default/helpers/classes/: _extended_sklearn_linreg.py  confounds.py  data_computation.py  load_in_data.py  signal_processing.py
src/cvr_analysis/default/helpers/functions/: generic.py
src/cvr_analysis/default/helpers/workflows/: get_confounds.py  load_regressor_wf.py  post_processing_wf.py  refine_regressor.py  regression_wf.py
src/cvr_analysis/default/mr/: __init__.py  cvr_wf.py  load_data_wf.py  save_data.py
src/cvr_analysis/default/physio/: __init__.py  cvr_wf.py  load_data_wf.py  save_data.py
src/cvr_analysis/dev/classes/: confounds.py  delay_regress.py  find_peak.py  helper_functions.py  xcorr.py
src/cvr_analysis/dev/tau/: cvr_wf.py  post_processing.py  save_data.py  tau_analysis.py
src/cvr_analysis/legacy/: bids.py  co2.py  get_output_files.py  plotting.py  regression.py  timeseries.py
src/cvr_analysis/legacy/modalities_study/: Dockerfile  Dockerfile_mamba  docker_build.sh  run.py  setup_wf.py
src/cvr_analysis/legacy/modalities_study/workflows/: cvr_wf.py  post_processing.py  regression.py  save_data.py
src/cvr_analysis/legacy/modalities_study/workflows/utils/: _extended_sklearn_linreg.py  data_computation.py  load_in_data.py
src/cvr_analysis/modalities_study/: Dockerfile  docker_build.sh  environment.yml  run.py
src/cvr_analysis/modalities_study/workflows/: cvr_wf.py  post_processing.py  regression.py  save_data.py
src/cvr_analysis/modalities_study/workflows/utils/: _extended_sklearn_linreg.py  confounds.py  data_computation.py  load_in_data.py  signal_processing.py
src/cvr_analysis/tools/: plotting.py
src/cvr_analysis/workflows/doppler/: __init__.py  cvr_wf.py  post_processing.py  regression.py  save_data.py
src/cvr_analysis/workflows/mr/: cvr_wf.py  regression.py  save_data.py
src/cvr_analysis/workflows/mr/default/: __init__.py  cvr_wf.py  post_processing.py  regression.py  save_data.py
src/cvr_analysis/workflows/mr/tau/: cvr_wf.py  post_processing.py  tau_analysis.py  tau_delay.py
src/cvr_analysis/workflows/utils/: confounds.py  data_computation.py  load_in_data.py
src/cvr_analysis/workflows/utils/dev/: delay_regress.py  find_peak.py  regress.py  xcorr.py
