# pyproject.toml
[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "cvr_analysis"
authors = [
    {name = "Gustav Magnussin", email = "gustav.magnusson@liu.se"},
]
description = "Process control package"
requires-python = ">=3.8"
keywords = ["process", "control"]
license = {text = "BSD-3-Clause"}
dependencies = [
    "dtaidistance==2.3.12",
    "matplotlib==3.9.2",
    "multiprocess==0.70.16",
    "nibabel==5.2.1",
    "nilearn==0.10.4",
    "numpy==2.1.1",
    "pandas==2.2.3",
    "pyppca==0.0.4",
    "scikit_learn==1.5.2",
    "scipy==1.14.1",
    "statsmodels==0.14.2",
    "threadpoolctl==3.5.0",
    "tqdm==4.66.1",
    "process_control @ git+https://github.com/gurraburra/process-control"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["jupyter", "ipywidgets", "ipympl"]

[project.scripts]
cvr-modality-study = "cvr_analysis.modalities_study.run:main"

[tool.setuptools.dynamic]
version = {attr = "cvr_analysis._version.__version__"}