# pyproject.toml
[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "cvr_analysis"
authors = [
    {name = "Gustav Magnussin", email = "gustav.magnusson@liu.se"},
]
description = "Process control package"
requires-python = ">=3.8"
keywords = ["process", "control"]
license = {text = "BSD-3-Clause"}
dependencies = [
    "dtaidistance==2.3.12",
    "multiprocess==0.70.16",
    "nilearn==0.10.4",
    "numpy==2.1.1",
    "pandas==2.2.3",
    "scikit_learn==1.5.2",
    "scipy==1.14.1",
    "threadpoolctl==3.5.0",
    "tqdm==4.66.1",
    "process_control @ git+https://github.com/gurraburra/process-control"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["matplotlib", "seaborn", "jupyter", "ipywidgets", "ipympl", "wakepy", "openpyxl"]

[project.scripts]
cvr-analysis = "cvr_analysis.run:main"

[tool.setuptools.dynamic]
version = {attr = "cvr_analysis._version.__version__"}