# pyproject.toml
[build-system]
requires = ["setuptools >= 80"]
build-backend = "setuptools.build_meta"

[project]
name = "cvr_analysis"
authors = [
    {name = "Gustav Magnussin", email = "gustav.magnusson@liu.se"},
]
description = "Process control package"
requires-python = ">=3.13"
keywords = ["process", "control"]
license = {text = "BSD-3-Clause"}
dependencies = [
    "dtaidistance==2.3.13",
    "multiprocess==0.70.18",
    "nilearn==0.12.0",
    "numpy==2.3.1",
    "pandas==2.3.0",
    "scikit_learn==1.7.0",
    "scipy==1.16.0",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
    "process_control @ git+https://github.com/gurraburra/process-control"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["matplotlib", "seaborn", "jupyter", "ipywidgets", "ipympl", "wakepy", "openpyxl"]

[project.scripts]
cvr-analysis = "cvr_analysis.run:main"
cvr-modality-study = "cvr_analysis.legacy.modalities_study.run:main"

[tool.setuptools.dynamic]
version = {attr = "cvr_analysis._version.__version__"}